# podcasts

./: .gitlab-ci.yml  Cargo.toml
src/: episodes.rs  file_system.rs  http_203.xml  lib.rs  main.rs  podcasts.rs  rss_203.xml  syntax.xml  web.rs
src/test_files/: http_203.csv  syntax.csv
