[package]
name = "podcasts"
version = "0.1.0"
authors = ["dmitryshur <dimashur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "podcasts"
path = "src/lib.rs"

[[bin]]
name = "podcasts"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.1"
csv = "1.1"
serde = "1.0.111"
