[package]
name = "podcasts"
version = "0.1.0"
authors = ["dmitryshur <dimashur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "podcasts"
path = "src/lib.rs"

[[bin]]
name = "podcasts"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.1"
csv = "1.1"
serde = { version = "1.0.111", features = ["derive"] }
rayon = "1.1"
colored = "1.9"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rss = "1.0"
bytes = "0.5.4"
